# axon

./: app.py  axon.py  models.py  pyproject.toml  random.txt  replit.md  routes.py
config/: deployment_schema.json  schema.py  service_mappings.json
instance/: deployments.db
services/: deployment_manager.py  harness_client.py  k8s_client.py  yaml_processor.py
static/js/: deployment.js
templates/: base.html  error.html  index.html  modals.html  status.html  upload.html
tests/: conftest.py  test_deployment_manager.py  test_harness_client.py  test_k8s_client.py  test_yaml_processor.py
utils/: exceptions.py  logger.py
